[project]
name = "morningcast"
version = "0.1.0"
description = "Concise, AI-curated morning learning podcasts."
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["morningcast"]
